li elements are no longer overlapping

--- a/src/components/styles/OurTeam.css
+++ b/src/components/styles/OurTeam.css
@@ -45,3 +45,8 @@ div .SocialProof {
         margin: 0;
     }
 }
+
+li {
+    display:inline;
+    width: 800px;
+}
